# blog

./: .gitignore  .gitmodules  .vale.ini  README.md  about-me.html  archives.html  authors.html  categories.html  docker-alongside-gns3-on-a-windows-amd-system.html  home.html  improvements-to-the-netbox-webhook-receiver.html  index.html  kawi.html  linux-networking-for-the-cisco-admin.html  netbox-webhook-receiver-with-python-celery-and-fastapi.html  netsim-tools-quickstart.html  pelican-cloudflare-pages-en.html  pyproject.toml  rss-feed.html  tags.html  type-hinting-napalm.html
author/: kirchnerl.html  leo-kirchner.html
category/: articles.html  misc.html  networking.html  programming.html
drafts/: 84.html  privacy-policy.html
feeds/: all.atom.xml  articles.atom.xml  misc.atom.xml  networking.atom.xml  programming.atom.xml
site/: pelicanconf.py  publishconf.py
site/content/: pelican_cloudflare_pages.md
site/content/articles/: 84.md  about-me.md  docker-alongside-gns3-on-a-windows-amd-system.md  functional-programming-network-automation.md  improvements-to-the-netbox-webhook-receiver.md  linux-networking-for-the-cisco-admin.md  netbox-webhook-receiver-with-python-celery-and-fastapi.md  netsim-tools-quickstart.md  netsim-tools-suzieq.md  type-hinting-napalm.md
site/content/extra/: CNAME
tag/: ansible.html  celery.html  cisco.html  fastapi.html  gns3.html  libvirt.html  linux.html  mypy.html  napalm.html  netbox.html  networking.html  pelican.html  python.html  vagrant.html
