[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My blog at blog.kirchne.red"
authors = ["Leo Kirchner <leo@kirchne.red>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4.6.0"
ghp-import = "^1.1.0"
invoke = "^1.5.0"
lxml = "^4.6.3"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
