[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My blog at blog.kirchne.red"
authors = ["Leo Kirchner <leo@kirchne.red>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.6.0"}
ghp-import = "^1.1.0"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
