[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My blog at blog.kirchne.red"
authors = ["Leo Kirchner <leo@kirchne.red>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.6.0"}
ghp-import = "^1.1.0"
invoke = "^1.5.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[tool.black]
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | netbox
    | migrations
    | site/Flex
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                    # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
